--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,12 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/doctrine-bundle": "^2.11",
+        "doctrine/doctrine-migrations-bundle": "^3.3",
+        "doctrine/orm": "^2.17",
         "pjplonka/leaf-cmf-core": "^0.0.1",
         "symfony/console": "7.0.*",
+        "symfony/dependency-injection": "7.0.*",
         "symfony/dotenv": "7.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.0.*",
