--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "doctrine/doctrine-bundle": "^2.11",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^2.17",
-        "pjplonka/leaf-cmf-core": "*",
+        "pjplonka/leaf-cmf-core": "^0.0.3",
         "symfony/console": "7.0.*",
         "symfony/dependency-injection": "7.0.*",
         "symfony/dotenv": "7.0.*",
