--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,7 +20,6 @@ services:
         resource: '../src/'
         exclude:
             - '../src/DependencyInjection/'
-            - '../src/Entity/'
             - '../src/Kernel.php'
 
     # add more service definitions when explicit configuration is needed
@@ -35,6 +34,6 @@ services:
     Elements:
         class: App\CoreIntegration\Elements
 
-    App\Controller\ElementController:
-        class: App\Controller\ElementController
+    App\Element\UserInterface\Controller\ElementController:
+        class: App\Element\UserInterface\Controller\ElementController
         arguments: ['@LeafCoreDefaultCommandBus']
