--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,9 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
 
+imports:
+    - { resource: services/ }
+
 services:
     # default configuration for services in *this* file
     _defaults:
@@ -17,8 +20,27 @@ services:
         resource: '../src/'
         exclude:
             - '../src/DependencyInjection/'
-            - '../src/Entity/'
             - '../src/Kernel.php'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    EventDispatcher:
+        class: App\Element\Infrastructure\Event\EventDispatcher
+
+    ConfigurationProvider:
+        class: App\CoreIntegration\ConfigurationProvider
+        arguments: ['@kernel']
+
+    Elements:
+        class: App\Element\Infrastructure\Repository\Elements
+
+    App\Element\UserInterface\Controller\ElementController:
+        class: App\Element\UserInterface\Controller\ElementController
+        arguments: ['@LeafCoreDefaultCommandBus']
+
+    ValidationFailedExceptionSubscriber:
+        class: App\Element\Infrastructure\Event\ValidationFailedExceptionSubscriber
+        arguments: []
+        tags:
+            - { name: kernel.event_subscriber }
