--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "doctrine/orm": "^2.17",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.25",
-        "pjplonka/leaf-cmf-core": "^0.0.4",
+        "pjplonka/leaf-cmf-core": "*",
         "symfony/console": "7.0.*",
         "symfony/dependency-injection": "7.0.*",
         "symfony/dotenv": "7.0.*",
