Differentiate elements configuration for tests and local/prod environment nad make it configurable by environment variable.

--- a/.env
+++ b/.env
@@ -28,3 +28,5 @@ APP_SECRET=ef734eff844d6ca10e6ed9ec8889ec54
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+ELEMENTS_CONFIGURATION_PATH="config/elements/"
