--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    app.elements_configuration_path: '%kernel.project_dir%/%env(ELEMENTS_CONFIGURATION_PATH)%'
 
 imports:
     - { resource: services/ }
@@ -30,7 +31,7 @@ services:
 
     ConfigurationProvider:
         class: App\CoreIntegration\ConfigurationProvider
-        arguments: ['@kernel']
+        arguments: ['%app.elements_configuration_path%']
 
     Elements:
         class: App\Element\Infrastructure\Repository\Elements
