--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,31 @@
 {
+    "name": "pjplonka/leaf-cmf-api",
+    "description": "API for LeafCMF",
     "type": "project",
     "license": "proprietary",
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=8.2",
+        "php": "^8",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/doctrine-bundle": "^2.11",
-        "doctrine/doctrine-migrations-bundle": "^3.3",
-        "doctrine/orm": "^2.17",
-        "phpdocumentor/reflection-docblock": "^5.3",
-        "phpstan/phpdoc-parser": "^1.25",
-        "pjplonka/leaf-cmf-core": "*",
-        "symfony/console": "7.0.*",
-        "symfony/dependency-injection": "7.0.*",
-        "symfony/dotenv": "7.0.*",
+        "doctrine/doctrine-bundle": "^2",
+        "doctrine/doctrine-migrations-bundle": "^3",
+        "doctrine/orm": "^3",
+        "phpdocumentor/reflection-docblock": "^5",
+        "phpstan/phpdoc-parser": "^2",
+        "pjplonka/leaf-cmf-core": "^0",
+        "symfony/console": "^7",
+        "symfony/dependency-injection": "^7",
+        "symfony/dotenv": "^7",
         "symfony/flex": "^2",
-        "symfony/framework-bundle": "7.0.*",
-        "symfony/property-access": "7.0.*",
-        "symfony/property-info": "7.0.*",
-        "symfony/runtime": "7.0.*",
-        "symfony/serializer": "7.0.*",
-        "symfony/uid": "7.0.*",
-        "symfony/yaml": "7.0.*"
+        "symfony/framework-bundle": "^7",
+        "symfony/property-access": "^7",
+        "symfony/property-info": "^7",
+        "symfony/runtime": "^7",
+        "symfony/serializer": "^7",
+        "symfony/uid": "^7",
+        "symfony/yaml": "^7"
     },
     "config": {
         "allow-plugins": {
@@ -68,16 +70,10 @@
     "conflict": {
         "symfony/symfony": "*"
     },
-    "extra": {
-        "symfony": {
-            "allow-contrib": false,
-            "require": "7.0.*"
-        }
-    },
     "require-dev": {
-        "phpunit/phpunit": "^9.5",
-        "symfony/browser-kit": "7.0.*",
-        "symfony/css-selector": "7.0.*",
-        "symfony/phpunit-bridge": "^7.0"
+        "phpunit/phpunit": "^12",
+        "symfony/browser-kit": "^7",
+        "symfony/css-selector": "^7",
+        "symfony/phpunit-bridge": "^7"
     }
 }
