Add parent field as one to many relation (#4)
* Use and handle parent field as one to many relation.
* Add configs.

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,7 @@
 services:
   php:
     image: ${IMAGES_PREFIX:-}app-php
+    container_name: leaf_php
     restart: unless-stopped
     environment:
       SERVER_NAME: ${SERVER_NAME:-localhost}, php:80
@@ -25,6 +26,7 @@ services:
   ###> doctrine/doctrine-bundle ###
   database:
     image: postgres:${POSTGRES_VERSION:-15}-alpine
+    container_name: leaf_db
     environment:
       POSTGRES_DB: ${POSTGRES_DB:-app}
       # You should definitely change the password in production
